fixed bugs - admin hapus akun responden beserta tanggapan surveinya

--- a/public/css/backup-admin.css
+++ b/public/css/backup-admin.css
@@ -179,6 +179,23 @@ sup {
 }
 
 
+/* preloader */
+
+.preloader {
+    align-items: center;
+    background: rgb(255, 255, 255, .5);
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    left: 0;
+    position: fixed;
+    top: 0;
+    transition: opacity 0.3s linear;
+    width: 100%;
+    z-index: 9999;
+}
+
+
 /* my preset */
 
 .list-button {
@@ -339,6 +356,93 @@ sup {
 .btn-rouge:not(:disabled):not(.disabled).active:focus,
 .btn-rouge:not(:disabled):not(.disabled):active:focus,
 .show>.btn-rouge.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0 rgba(38, 143, 255, .5)
+}
+
+
+/* btn-malibu */
+
+.btn-malibu {
+    color: #000 !important;
+    background-color: #63BBD9 !important;
+    border-color: #66CCCC !important;
+    box-shadow: 0 0 0 0 rgba(38, 143, 255, .5)
+}
+
+.btn-malibu:hover {
+    color: #fff !important;
+    background-color: rgb(174, 67, 91) !important;
+    border-color: rgb(174, 67, 91, .2) !important;
+}
+
+.btn-malibu.focus,
+.btn-malibu:focus {
+    color: #fff !important;
+    background-color: rgb(174, 67, 91) !important;
+    border-color: rgb(174, 67, 91, .2) !important;
+    box-shadow: 0 0 0 0 rgba(174, 67, 91, .5)
+}
+
+.btn-malibu.disabled,
+.btn-malibu:disabled {
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff
+}
+
+.btn-malibu:not(:disabled):not(.disabled).active,
+.btn-malibu:not(:disabled):not(.disabled):active,
+.show>.btn-malibu.dropdown-toggle {
+    color: #fff;
+    background-color: #0062cc;
+    border-color: #005cbf
+}
+
+.btn-malibu:not(:disabled):not(.disabled).active:focus,
+.btn-malibu:not(:disabled):not(.disabled):active:focus,
+.show>.btn-malibu.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0 rgba(38, 143, 255, .5)
+}
+
+
+/* btn-cosmic */
+
+.btn-cosmic {
+    color: #fff !important;
+    background-color: #7a4c75 !important;
+    border-color: rgb(174, 67, 91, .2) !important;
+}
+
+.btn-cosmic:hover {
+    color: #fff !important;
+    background-color: #ae435b !important;
+}
+
+.btn-cosmic.focus,
+.btn-cosmic:focus {
+    color: #fff !important;
+    background-color: #000 !important;
+    box-shadow: 0 0 0 0 rgba(38, 143, 255, .5)
+}
+
+.btn-cosmic.disabled,
+.btn-cosmic:disabled {
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff
+}
+
+.btn-cosmic:not(:disabled):not(.disabled).active,
+.btn-cosmic:not(:disabled):not(.disabled):active,
+.show>.btn-cosmic.dropdown-toggle {
+    color: #fff;
+    background-color: #0062cc;
+    border-color: #005cbf
+}
+
+.btn-cosmic:not(:disabled):not(.disabled).active:focus,
+.btn-cosmic:not(:disabled):not(.disabled):active:focus,
+.show>.btn-cosmic.dropdown-toggle:focus {
     box-shadow: 0 0 0 0 rgba(38, 143, 255, .5)
 }
 
@@ -6202,6 +6306,16 @@ a.badge-success:focus {
 .badge-info {
     color: #fff;
     background-color: #17a2b8
+}
+
+.badge-rouge {
+    color: #fff;
+    background-color: #ae435b
+}
+
+.badge-cosmic {
+    color: #fff;
+    background-color: #7a4c75
 }
 
 a.badge-info:focus,
@@ -54383,125 +54497,6 @@ a.text-muted:hover {
 
 
 /*# sourceMappingURL=adminlte.min.css.map */
-
-
-/*# sourceMappingURL=adminlte.min.css.map */
-
-:not(.is-invalid):not(.is-warning):not(.is-valid) {
-    border-color: #afb5ba
-}
-
-.dark-mode .accent-gray .page-item .page-link {
-    color: #6c757d
-}
-
-.dark-mode .accent-gray .page-item.active .page-link,
-.dark-mode .accent-gray .page-item.active a {
-    background-color: #6c757d;
-    border-color: #6c757d;
-    color: #fff
-}
-
-.dark-mode .accent-gray .page-item.disabled .page-link,
-.dark-mode .accent-gray .page-item.disabled a {
-    background-color: #fff;
-    border-color: #dee2e6;
-    color: #6c757d
-}
-
-.dark-mode .accent-gray [class*=sidebar-dark-] .sidebar a:not(.dropdown-item):not(.btn-app):not(.nav-link):not(.brand-link) {
-    color: #c2c7d0
-}
-
-.dark-mode .accent-gray [class*=sidebar-dark-] .sidebar a:not(.dropdown-item):not(.btn-app):not(.nav-link):not(.brand-link):hover {
-    color: #fff
-}
-
-.dark-mode .accent-gray [class*=sidebar-light-] .sidebar a:not(.dropdown-item):not(.btn-app):not(.nav-link):not(.brand-link) {
-    color: #343a40
-}
-
-.dark-mode .accent-gray [class*=sidebar-light-] .sidebar a:not(.dropdown-item):not(.btn-app):not(.nav-link):not(.brand-link):hover {
-    color: #212529
-}
-
-.dark-mode .dark-mode.accent-gray .page-item .page-link:focus,
-.dark-mode .dark-mode.accent-gray .page-item .page-link:hover {
-    color: #78828a
-}
-
-.dark-mode .accent-gray-dark .btn-link,
-.dark-mode .accent-gray-dark .nav-tabs .nav-link,
-.dark-mode .accent-gray-dark a:not(.dropdown-item):not(.btn-app):not(.nav-link):not(.brand-link):not(.page-link):not(.btn) {
-    color: #343a40
-}
-
-.dark-mode .accent-gray-dark .btn-link:hover,
-.dark-mode .accent-gray-dark .nav-tabs .nav-link:hover,
-.dark-mode .accent-gray-dark a:not(.dropdown-item):not(.btn-app):not(.nav-link):not(.brand-link):not(.page-link):not(.btn):hover {
-    color: #121416
-}
-
-.dark-mode .accent-gray-dark .dropdown-item.active,
-.dark-mode .accent-gray-dark .dropdown-item:active {
-    background-color: #343a40;
-    color: #fff
-}
-
-.dark-mode .accent-gray-dark .custom-control-input:checked~.custom-control-label::before {
-    background-color: #343a40;
-    border-color: #060708
-}
-
-.dark-mode .accent-gray-dark .custom-control-input:checked~.custom-control-label::after {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E")
-}
-
-.dark-mode .accent-gray-dark .custom-control-input:focus:not(:checked)~.custom-control-label::before,
-.dark-mode .accent-gray-dark .custom-file-input:focus~.custom-file-label,
-.dark-mode .accent-gray-dark .custom-select:focus,
-.dark-mode .accent-gray-dark .form-control:focus:not(.is-invalid):not(.is-warning):not(.is-valid) {
-    border-color: #6d7a86
-}
-
-.dark-mode .accent-gray-dark .page-item .page-link {
-    color: #343a40
-}
-
-.dark-mode .accent-gray-dark .page-item.active .page-link,
-.dark-mode .accent-gray-dark .page-item.active a {
-    background-color: #343a40;
-    border-color: #343a40;
-    color: #fff
-}
-
-.dark-mode .accent-gray-dark .page-item.disabled .page-link,
-.dark-mode .accent-gray-dark .page-item.disabled a {
-    background-color: #fff;
-    border-color: #dee2e6;
-    color: #6c757d
-}
-
-.dark-mode .accent-gray-dark [class*=sidebar-dark-] .sidebar a:not(.dropdown-item):not(.btn-app):not(.nav-link):not(.brand-link) {
-    color: #c2c7d0
-}
-
-.dark-mode .accent-gray-dark [class*=sidebar-dark-] .sidebar a:not(.dropdown-item):not(.btn-app):not(.nav-link):not(.brand-link):hover {
-    color: #fff
-}
-
-.dark-mode .accent-gray-dark [class*=sidebar-light-] .sidebar a:not(.dropdown-item):not(.btn-app):not(.nav-link):not(.brand-link) {
-    color: #343a40
-}
-
-.dark-mode .accent-gray-dark [class*=sidebar-light-] .sidebar a:not(.dropdown-item):not(.btn-app):not(.nav-link):not(.brand-link):hover {
-    color: #212529
-}
-
-.dark-mode .dark-mode.accent-gray-dark .page-item .page-link:focus,
-.dark-mode .dark-mode.accent-gray-dark .page-item .page-link:hover {
-    color: #3f474e
-}
 
 
 /*# sourceMappingURL=adminlte.min.css.map */
